[package]
name = "gocd-encrypt"
version = "0.1.0"
authors = ["Alejandro Valdes <alejandrovaldes@live.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getopts = "0.2"
rpassword = "4.0"
reqwest = { version = "0.10", features = ["json", "blocking"] }
serde_json = "1.0"
serde_derive = "1.0"
